WIP - porting builder to use buttons 2.0 buttons

--- a/public/_partials/builder/buttons-border.jade
+++ b/public/_partials/builder/buttons-border.jade
@@ -1,11 +1,23 @@
 section(id="border" class="showcase" data-type="build" data-name="border")
-  h3 Border Buttons
+  h3 Border &amp; Borderless Buttons
+  p TODO: Incorporate mobile example and fix this up
 
   section.showcase-examples.
-    <a href="#" class="button button-border">press me</a>
-    <a href="#" class="button button-border-primary button-rounded">press me</a>
-    <a href="#" class="button button-border-action button-pill">press me</a>
-    <a href="#" class="button button-border-highlight button-circle">press me</a>
-    <a href="#" class="button button-border-caution"><i class="fa fa-camera"></i> press me</a>
-    <a href="#" class="button button-border-royal button-pill">press me</a>
+    <a href="#" class="button button-border button-primary button-rounded">press me</a>
+    <a href="#" class="button button-border button-action button-pill">press me</a>
+    <a href="#" class="button button-border button-highlight button-circle">Go</a>
+    <a href="#" class="button button-border button-caution"><i class="fa fa-camera"></i> press me</a>
+    <button class="button button-large button-action button-borderless"><i class="fa fa-tag"></i></button>
+    <a href="#" class="button button-border button-royal button-pill">press me</a>
+    
+    <div class="invert" style="display: inline-block; background: linear-gradient(90deg, #9d50bb 10%, #6e48aa 90%); padding: 20px; border-radius: 20px;">
+      <button class="button button-large button-plain button-border button-circle"><i class="fa fa-bitcoin"></i></button>
+      <button class="button button-large button-plain button-border button-circle"><i class="fa fa-refresh"></i></button>
+      <button class="button button-large button-plain button-border button-circle"><i class="fa fa-angle-left"></i></button>
+      <button class="button button-large button-plain button-border button-circle"><i class="fa fa-angle-right"></i></button>
+      <button class="button button-large button-plain button-border button-box"><i class="fa fa-reply"></i></button>
+      <button class="button button-large button-plain button-border button-box"><i class="fa fa-star"></i></button>
+      <button class="button button-large button-plain button-border button-box"><i class="fa fa-trash-o"></i></button>
+      <button class="button button-large button-plain button-border button-box"><i class="fa fa-tag"></i></button>
+    </div>
   code
