--- a/public/_partials/builder/buttons-circle.jade
+++ b/public/_partials/builder/buttons-circle.jade
@@ -2,10 +2,20 @@ section(id="circle" class="showcase" data-type="build" data-name="circle")
   h3 Circle Buttons
 
   section.showcase-examples.
-    <a href="#" class="button button-circle ">press me</a>
-    <a href="#" class="button button-circle button-primary">press me</a>
-    <a href="#" class="button button-circle button-action">press me</a>
-    <a href="#" class="button button-circle button-highlight">press me</a>
-    <a href="#" class="button button-circle button-caution">press me</a>
-    <a href="#" class="button button-circle button-royal">press me</a>
+    <button class="button button-circle button-tiny"><i class="fa fa-plus"></i></button>
+    <button class="button button-circle button-small"><i class="fa fa-plus"></i></button>
+    <button class="button button-circle button-large"><i class="fa fa-plus"></i></button>
+    <button class="button button-circle button-jumbo"><i class="fa fa-plus"></i></button>
+    <a href="#" class="button button-raised button-circle button-primary button-jumbo"><i class="fa fa-thumbs-up"></i></a>
+    <a href="#" class="button button-raised button-circle button-action button-jumbo"><i class="fa fa-thumbs-up"></i></a>
+    <button class="button button-border button-circle button-jumbo button-primary"><i class="fa fa-reply"></i></button>
+    <button class="button button-border button-circle button-jumbo button-action"><i class="fa fa-reply"></i></button>
+    <a href="#" class="button button-circle button-action button-jumbo">Go</a>
+    <a href="#" class="button button-circle button-highlight button-jumbo">Go</a>
+    <a href="#" class="button button-circle button-caution button-jumbo">Go</a>
+    <a href="#" class="button button-circle button-royal button-jumbo">Go</a>
+    <button class="button button-3d button-primary button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button>
+    <button class="button button-3d button-action button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button>
+    <button class="button button-3d button-highlight button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button>
+    <button class="button button-3d button-caution button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button>
   code
