--- a/public/_partials/builder/buttons-dropdown.jade
+++ b/public/_partials/builder/buttons-dropdown.jade
@@ -3,66 +3,77 @@ section(id="dropdown" class="showcase" data-type="build" data-name="dropdown")
 
   section.showcase-examples.
     <span class="button-dropdown" data-buttons="dropdown">
-      <a href="#" class="button button-rounded"> press me <i class="fa fa-caret-down"></i></a>
+      <button class="button button-rounded">
+        Select Me <i class="fa fa-caret-down"></i>
+      </button>
 
-      <ul>
-        <li><a href="#">Option 1</a></li>
-        <li><a href="#">Option 2</a></li>
-        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
+      <ul class="button-dropdown-list">
+        <li><a href="http://unicorn-ui.com/">Option Link 1</a></li>
+        <li><a href="http://unicorn-ui.com/">Option Link 2</a></li>
+        <li class="button-dropdown-divider">
+          <a href="#">Option Link 3</a>
+        </li>
       </ul>
     </span>
 
-    <span class="button-dropdown" data-buttons="dropdown">
-      <a href="#" class="button button-rounded button-flat-primary"> press me <i class="fa fa-caret-down"></i></a>
+    <span class="button-dropdown button-dropdown-primary" data-buttons="dropdown">
+      <button class="button button-primary button-large">
+        <i class="fa fa-bars"></i> Select Me
+      </button>
 
-      <ul class="button-dropdown-menu-below">
-        <li><a href="#">Option 1</a></li>
-        <li><a href="#">Option 2</a></li>
-        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
+      <ul class="button-dropdown-list is-below">
+        <li><a href="http://unicorn-ui.com/"><i class="fa fa-heart-o"></i> Option Link 1</a></li>
+        <li><a href="http://unicorn-ui.com/">Option Link 2</a></li>
+        <li class="button-dropdown-divider">
+          <a href="#">Option Link 3</a>
+        </li>
       </ul>
     </span>
 
-    <span class="button-dropdown" data-buttons="dropdown">
-      <a href="#" class="button button-rounded button-flat-action"> press me <i class="fa fa-caret-down"></i></a>
 
-      <ul class="button-dropdown-menu-above">
-        <li><a href="#">Option 1</a></li>
-        <li><a href="#">Option 2</a></li>
-        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
+    <span class="button-dropdown button-dropdown-action" data-buttons="dropdown">
+      <button class="button button-action">
+        Select Me <i class="fa fa-caret-up"></i>
+      </button>
+
+      <ul class="button-dropdown-list is-above">
+        <li><a href="http://unicorn-ui.com/">Option Link 1</a></li>
+        <li><a href="http://unicorn-ui.com/">Option Link 2</a></li>
+        <li class="button-dropdown-divider">
+          <a href="#">Option Link 3</a>
+        </li>
       </ul>
     </span>
 
-    <span class="button-dropdown" data-buttons="dropdown">
-      <a href="#" class="button button-highlight button-rounded">
-        press me <i class="fa fa-caret-down"></i>
+    <span class="button-dropdown button-dropdown-plain" data-buttons="dropdown">
+      <button class="button button-caution button-pill">
+        Select Me <i class="fa fa-caret-down"></i>
+      </button>
+
+      <ul class="button-dropdown-list">
+        <li><a href="http://unicorn-ui.com/">Option Link 1</a></li>
+        <li class="button-dropdown-divider">
+          <a href="http://unicorn-ui.com/">Option Link 2</a>
+        </li>
+        <li>
+          <a href="#">Option Link 3</a>
+        </li>
+      </ul>
+    </span>
+
+    <span class="button-dropdown button-dropdown-inverse" data-buttons="dropdown">
+      <a href="#" class="button button-inverse">
+          <i class="fa fa-envelope"></i> Select Me <i class="fa fa-caret-down"></i>
       </a>
 
-      <ul>
-        <li><a href="#">Option 1</a></li>
-        <li><a href="#">Option 2</a></li>
-        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
-      </ul>
-    </span>
-
-    <span class="button-dropdown" data-buttons="dropdown">
-      <a href="#" class="button button-caution button-pill"> press me <i class="fa fa-caret-down"></i></a>
-
-      <ul>
-        <li><a href="#">Option 1</a></li>
-        <li><a href="#">Option 2</a></li>
-        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
-      </ul>
-    </span>
-
-    <span class="button-dropdown" data-buttons="dropdown">
-      <a href="#" class="button button-royal button-rounded">
-        <i class="fa fa-envelope"></i> press me <i class="fa fa-caret-down"></i>
-      </a>
-
-      <ul>
-        <li><a href="#">Option 1</a></li>
-        <li><a href="#">Option 2</a></li>
-        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
+      <ul class="button-dropdown-list is-below">
+        <li><a href="http://unicorn-ui.com/">Option Link 1</a></li>
+        <li class="button-dropdown-divider">
+          <a href="http://unicorn-ui.com/">Option Link 2</a>
+        </li>
+        <li>
+          <a href="#">Option Link 3</a>
+        </li>
       </ul>
     </span>
   code
