--- a/public/buttons/builder/_layout.jade
+++ b/public/buttons/builder/_layout.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
-    meta(name="description" content="A highly customizable CSS Buttons framework built with Sass and Compass. The Buttons framework is ready to use and easy to customize")
+    meta(name="description" content="A highly customizable CSS Buttons framework built with Sass. The Buttons framework is ready to use and easy to customize")
     meta(name="viewport" content="width=device-width")
 
     // FAVICON
