--- a/public/_partials/builder/buttons-3d.jade
+++ b/public/_partials/builder/buttons-3d.jade
@@ -3,9 +3,9 @@ section(id="3d" class="showcase" data-type="build" data-name="3d")
 
   section.showcase-examples.
     <a href="#" class="button button-3d">press me</a>
-    <a href="#" class="button button-3d-primary button-rounded">press me</a>
-    <a href="#" class="button button-3d-action button-pill">press me</a>
-    <a href="#" class="button button-3d-highlight button-circle">press me</a>
-    <a href="#" class="button button-3d-caution"><i class="fa fa-camera"></i> press me</a>
-    <a href="#" class="button button-3d-royal button-rounded">press me</a>
+    <a href="#" class="button button-3d button-primary button-rounded">press me</a>
+    <a href="#" class="button button-3d button-action button-pill">press me</a>
+    <a href="#" class="button button-3d button-highlight button-circle">Go</a>
+    <a href="#" class="button button-3d button-caution"><i class="fa fa-camera"></i> press me</a>
+    <a href="#" class="button button-3d button-royal button-rounded">press me</a>
   code
