--- a/public/_partials/builder/buttons-block.jade
+++ b/public/_partials/builder/buttons-block.jade
@@ -2,15 +2,15 @@ section(id="block" class="showcase" data-type="example" data-name="block")
   h3 Block Buttons
 
   section.showcase-examples.
-    <a href="#" class="button button-block button-rounded button-large">press me</a>
+    <a href="http://unicorn-ui.com/" class="button button-block button-rounded button-large">Go</a>
     <br/>
-    <a href="#" class="button button-block button-rounded button-primary button-large">press me</a>
+    <a href="http://unicorn-ui.com/" class="button button-block button-rounded button-primary button-large">Go</a>
     <br/>
-    <a href="#" class="button button-block button-rounded button-action button-large">press me</a>
+    <a href="http://unicorn-ui.com/" class="button button-block button-rounded button-action button-large">Go</a>
     <br/>
-    <a href="#" class="button button-block button-rounded button-highlight button-large">press me</a>
+    <a href="http://unicorn-ui.com/" class="button button-block button-rounded button-highlight button-large">Go</a>
     <br/>
-    <a href="#" class="button button-block button-rounded button-caution button-large">press me</a>
+    <a href="http://unicorn-ui.com/" class="button button-block button-rounded button-caution button-large">Go</a>
     <br/>
-    <a href="#" class="button button-block button-rounded button-royal button-large">press me</a>
+    <a href="http://unicorn-ui.com/" class="button button-block button-rounded button-royal button-large">Go</a>
   code
