--- a/public/_partials/builder/buttons-flat.jade
+++ b/public/_partials/builder/buttons-flat.jade
@@ -2,32 +2,25 @@ section(id="flat" class="showcase" data-type="build" data-name="flat")
   h3 Flat Buttons
 
   section.showcase-examples.
-    <a href="#" class="button button-rounded button-flat">press me</a>
-    <a href="#" class="button button-rounded button-flat-primary">press me</a>
-    <a href="#" class="button button-rounded button-flat-action">press me</a>
-    <a href="#" class="button button-rounded button-flat-highlight">press me</a>
-    <a href="#" class="button button-rounded button-flat-caution">press me</a>
-    <a href="#" class="button button-rounded button-flat-royal">press me</a>
+    <a href="#" class="button button-rounded">press me</a>
+    <a href="#" class="button button-rounded button-primary">press me</a>
+    <a href="#" class="button button-rounded button-action">press me</a>
+    <a href="#" class="button button-rounded button-highlight">press me</a>
+    <a href="#" class="button button-rounded button-caution">press me</a>
+    <a href="#" class="button button-rounded button-royal">press me</a>
     <br><br>
-    <a href="#" class="button button-pill button-flat">press me</a>
-    <a href="#" class="button button-pill button-flat-primary">press me</a>
-    <a href="#" class="button button-pill button-flat-action">press me</a>
-    <a href="#" class="button button-pill button-flat-highlight">press me</a>
-    <a href="#" class="button button-pill button-flat-caution">press me</a>
-    <a href="#" class="button button-pill button-flat-royal">press me</a>
+    <a href="#" class="button button-pill">press me</a>
+    <a href="#" class="button button-pill button-primary">press me</a>
+    <a href="#" class="button button-pill button-action">press me</a>
+    <a href="#" class="button button-pill button-highlight">press me</a>
+    <a href="#" class="button button-pill button-caution">press me</a>
+    <a href="#" class="button button-pill button-royal">press me</a>
     <br><br>
-    <a href="#" class="button button-flat">press me</a>
-    <a href="#" class="button button-flat-primary">press me</a>
-    <a href="#" class="button button-flat-action">press me</a>
-    <a href="#" class="button button-flat-highlight">press me</a>
-    <a href="#" class="button button-flat-caution">press me</a>
-    <a href="#" class="button button-flat-royal">press me</a>
-    <br><br>
-    <a href="#" class="button button-circle button-flat">press me</a>
-    <a href="#" class="button button-circle button-flat-primary">press me</a>
-    <a href="#" class="button button-circle button-flat-action">press me</a>
-    <a href="#" class="button button-circle button-flat-highlight">press me</a>
-    <a href="#" class="button button-circle button-flat-caution">press me</a>
-    <a href="#" class="button button-circle button-flat-royal">press me</a>
-
+    <a href="#" class="button">press me</a>
+    <a href="#" class="button button-primary">press me</a>
+    <a href="#" class="button button-action">press me</a>
+    <a href="#" class="button button-highlight">press me</a>
+    <a href="#" class="button button-caution">press me</a>
+    <a href="#" class="button button-royal">press me</a>
+    
   code
