--- a/public/_partials/builder/buttons-glow.jade
+++ b/public/_partials/builder/buttons-glow.jade
@@ -2,10 +2,10 @@ section(id="glow" class="showcase" data-type="build" data-name="glow")
   h3 Glow Buttons
 
   section.showcase-examples.
-    <a href="#" class="button glow ">press me</a>
-    <a href="#" class="button glow button-primary">press me</a>
-    <a href="#" class="button glow button-action">press me</a>
-    <a href="#" class="button glow button-highlight">press me</a>
-    <a href="#" class="button glow button-caution">press me</a>
-    <a href="#" class="button glow button-royal">press me</a>
+    <a href="#" class="button button-glow ">press me</a>
+    <a href="#" class="button button-glow button-primary">press me</a>
+    <a href="#" class="button button-glow button-action">press me</a>
+    <a href="#" class="button button-glow button-highlight">press me</a>
+    <a href="#" class="button button-glow button-caution">press me</a>
+    <a href="#" class="button button-glow button-royal">press me</a>
   code
