--- a/public/_partials/builder/buttons-square.jade
+++ b/public/_partials/builder/buttons-square.jade
@@ -1,11 +1,17 @@
 section(id="square" class="showcase" data-type="example" data-name="square")
-  h3 Square Buttons
+  h3 Square &amp; Box Buttons
 
   section.showcase-examples.
-    <a href="#" class="button">press me</a>
-    <a href="#" class="button button-primary">press me</a>
-    <a href="#" class="button button-action">press me</a>
-    <a href="#" class="button button-highlight">press me</a>
-    <a href="#" class="button button-caution">press me</a>
-    <a href="#" class="button button-royal">press me</a>
+    <button class="button button-square button-tiny"><i class="fa fa-plus"></i></button>
+    <button class="button button-primary button-square button-small"><i class="fa fa-plus"></i></button>
+    <button class="button button-action button-square"><i class="fa fa-plus"></i></button>
+    <button class="button button-highlight button-square button-large"><i class="fa fa-plus"></i></button>
+    <button class="button button-caution button-square button-jumbo"><i class="fa fa-plus"></i></button>
+    <button class="button button-royal button-square button-giant"><i class="fa fa-plus"></i></button>
+    <button class="button button-royal button-box button-giant"><i class="fa fa-plus"></i></button>
+    <button class="button button-caution button-box button-jumbo"><i class="fa fa-plus"></i></button>
+    <button class="button button-highlight button-box button-large"><i class="fa fa-plus"></i></button>
+    <button class="button button-action button-box"><i class="fa fa-plus"></i></button>
+    <button class="button button-primary button-box button-small"><i class="fa fa-plus"></i></button>
+    <button class="button button-box button-tiny"><i class="fa fa-plus"></i></button>
   code
