--- a/public/_partials/builder/buttons-wrappers.jade
+++ b/public/_partials/builder/buttons-wrappers.jade
@@ -2,8 +2,20 @@ section(id="wrappers" class="showcase" data-type="example" data-name="wrappers")
   h3 Button Wrappers
 
   section.showcase-examples.
-    <span class="button-wrap"><a href="#" class="button button-circle">press me</a></span>
-    <span class="button-wrap"><a href="#" class="button button-circle button-primary">press me</a></span>
-    <span class="button-wrap"><a href="#" class="button button-pill ">press me</a></span>
-    <span class="button-wrap"><a href="#" class="button button-pill button-primary">press me</a></span>
+    <span class="button-wrap">
+      <button class="button button-circle">
+        <i class="fa fa-cloud"></i>
+      </button>
+    </span>
+    <span class="button-wrap">
+      <button class="button button-circle button-raised button-primary">
+        <i class="fa fa-cloud"></i>
+      </button>
+    </span>
+    <span class="button-wrap">
+      <a href="http://unicorn-ui.com/" class="button button-pill ">Go</a>
+    </span>
+    <span class="button-wrap">
+      <a href="http://unicorn-ui.com/" class="button button-pill button-raised button-primary">Go</a>
+    </span>
   code
