Added typographic styles to buttons builder

--- a/public/buttons/builder/index.jade
+++ b/public/buttons/builder/index.jade
@@ -17,6 +17,7 @@
     != partial('../../_partials/builder/buttons-sizes')
     != partial('../../_partials/builder/buttons-wrappers')
     != partial('../../_partials/builder/buttons-form')
+    != partial('../../_partials/builder/buttons-type')
 
   != partial('../../_partials/builder/instructions')
   != partial('../../_partials/builder/js_templates')
