Fix builder Download buttons and remove button-flat*

--- a/public/_partials/builder/buttons-form.jade
+++ b/public/_partials/builder/buttons-form.jade
@@ -8,6 +8,6 @@ section(id="form" class="showcase" data-example="example" data-name="form")
     <!-- DISABLED BUTTONS -->
     <input disabled="" type="submit" value="Go" class="button button-pill button-primary">
     <button disabled="" class="button  button-pill button-primary">Go</button>
-    <button disabled="" class="button button-pill button-flat-primary">Go</button>
+    <button disabled="" class="button button-pill button-primary">Go</button>
     <a href="#" class="button disabled button-pill button-primary ">Go</a>
   code
