--- a/public/_partials/builder/hero.jade
+++ b/public/_partials/builder/hero.jade
@@ -3,8 +3,8 @@ header(class="hero" id="home")
   h2 A CSS button library built with Sass &amp; Compass
 
   section.hero-call-to-action.clearfix
-    a(class="button download button-flat-primary button-large button-rounded" href="#") Download
-    a(title="Adjust your settings" class="customize button button-flat button-large button-rounded" href="#")
+    a(class="button download button-primary button-large button-rounded" href="#") Download
+    a(title="Adjust your settings" class="customize button button-large button-rounded" href="#")
       i.fa.fa-bolt Customize
 
 
@@ -14,7 +14,7 @@ header(class="hero" id="home")
         label(class="label-hint" for="mce-EMAIL") Enter your email to get notified when it launches!
         .subscribe-field-container
             input(type="email" placeholder="email@example.com" value="" name="EMAIL" class=" required email" id="mce-EMAIL")
-            input(type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class=" button button-rounded button-flat ")
+            input(type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class=" button button-rounded")
             .clear
 
         div(style="position: absolute; left: -5000px;")
