--- a/public/_partials/builder/instructions.jade
+++ b/public/_partials/builder/instructions.jade
@@ -7,7 +7,7 @@ article.instructions
 
       ol.steps
         li
-          a(class="download button button-rounded button-flat-primary button-tiny" href="#")
+          a(class="download button button-rounded button-primary button-tiny" href="#")
             i.fa.fa-download Download Buttons
           |  a and add files to your website.
 
@@ -30,7 +30,7 @@ article.instructions
         i.fa.fa-github  Customize Buttons
       ol.steps
           li
-            a(class="button button-rounded button-flat-action button-tiny" href="https://github.com/unicorn-ui/Buttons/")
+            a(class="button button-rounded button-action button-tiny" href="https://github.com/unicorn-ui/Buttons/")
              i.fa.fa-github Fork or Download
             |   a the Buttons project on github.
           li Make sure you have <a target="_blank" href="http://sass-lang.com/download.html"> Sass</a>  and <a target="_blank" href="http://compass-style.org/install/"> Compass</a>  installed.
@@ -48,7 +48,7 @@ article.instructions
           .mc-field-group
             label(for="mce-EMAIL") Enter your email to get notified when it launches!
             input(type="email" placeholder="email@example.com" value="" name="EMAIL" class="required email" id="mce-EMAIL")
-            input(type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button-rounded button-flat-primary button-small")
+            input(type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button-rounded button-primary button-small")
             .clear
             div(style="position: absolute; left: -5000px;")
               input(type="text" name="b_8d64dfb6a9a561029375e03a8_04d53dbcbd" tabindex="-1" value="")
