--- a/public/_partials/builder/js_templates.jade
+++ b/public/_partials/builder/js_templates.jade
@@ -39,8 +39,8 @@ script(type="text/template" id="template-customizer")
       .clear
       ul.button-actions
     footer
-      input(type="submit" value="Update" class="update button button-rounded button-flat-primary button-large")
-      a(href="#" class="close button button-rounded button-flat button-large") Cancel
+      input(type="submit" value="Update" class="update button button-rounded button-primary button-large")
+      a(href="#" class="close button button-rounded button-large") Cancel
   .overlay
 
 
