--- a/public/_partials/builder/nav.jade
+++ b/public/_partials/builder/nav.jade
@@ -7,4 +7,4 @@ nav.nav.pinned
   ul
 
   footer
-    a(class="download button button-block button-flat-primary button-rounded button-large" href="#") Download
+    a(class="download button button-block button-primary button-rounded button-large" href="#") Download
