Color tweaks. Fixed borked inset shadows. 2 space formatting

--- a/resources/scss/module/builder/_code.scss
+++ b/resources/scss/module/builder/_code.scss
@@ -4,8 +4,12 @@
 // OPTIONS ///////////////////////////////////////////////
 //////////////////////////////////////////////////////////
 $showcase-namespace: '.showcase';
-$showcase-bg: #FFF;
+$showcase-bg: $grayWhite;
 $showcase-code-bg: #495563;
+$showcase-code-bg: #36464e;
+$showcase-code-bg: #445963 ;
+
+
 $showcase-title-color: #95a5a6;
 $showcase-font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
