--- a/resources/scss/module/builder/_nav.scss
+++ b/resources/scss/module/builder/_nav.scss
@@ -4,9 +4,9 @@
 // OPTIONS ///////////////////////////////////////////////
 //////////////////////////////////////////////////////////
 $nav-namespace: '.nav';
-$nav-hover: #566473;
-$nav-bg: #495563;
-$nav-dark: #3f4955;
+$nav-hover: #536d79;
+$nav-bg: #445963;
+$nav-dark: #36464e;
 $nav-font: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 $nav-highlight: #3498db;
 $nav-width: 240px;
@@ -15,19 +15,21 @@ $nav-logo-font-color: #FFF;
 $nav-logo-font: 'Cherry Swash', sans-serif;
 $nav-font-color: #7e8c9a;
 $nav-font-family: sans-serif;
-$nav-toggle-bg: #566473;
+$nav-toggle-bg: darken($nav-hover, 3%);
 $nav-toggle-selected-bg: #3f4955;
+$nav-toggle-selected-bg: $nav-dark;
 $nav-toggle-knob: #5e6e81;
+$nav-toggle-knob: lighten($nav-hover, 3%);
 
 
 //////////////////////////////////////////////////////////
 // BODY PADDING CSS //////////////////////////////////////
 //////////////////////////////////////////////////////////
 #{$nav-namespace}-pinned-left {
-    padding-left: $nav-width;
+  padding-left: $nav-width;
 }
 #{$nav-namespace}-pinned-right {
-    padding-right: $nav-width;
+  padding-right: $nav-width;
 }
 
 
@@ -35,232 +37,227 @@ $nav-toggle-knob: #5e6e81;
 // NAV ///////////////////////////////////////////////////
 //////////////////////////////////////////////////////////
 #{$nav-namespace} {
-    font-family: $nav-font-family;
-    width: 240px;
-    background: $nav-bg;
+  font-family: $nav-font-family;
+  width: 240px;
+  background: $nav-bg;
 
-    &.pinned {
-        position: fixed;
-        top: 0px;
-        bottom: 0px;
-        left: 0px;
-        z-index: 1;
+  &.pinned {
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    z-index: 1;
 
-        &.right {
-            left: auto;
-            right: 0px;
-        }
+    &.right {
+      left: auto;
+      right: 0px;
     }
+  }
 
-    ////////////////////////
-    // HEADER //////////////
-    ////////////////////////
-    header {
-        box-shadow: 0px 1px 2px rgba(0, 0, 0, .3);
-        background: $nav-dark;
+  ////////////////////////
+  // HEADER //////////////
+  ////////////////////////
+  header {
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, .4);
+    background: $nav-dark;
+    height: 40px;
+    padding: 10px;
+
+    h1 {
+      line-height: 40px;
+      width: 40px;
+      height: 40px;
+      margin: 0px auto;
+
+      a {
+        box-shadow: inset 0px 1px 0px rgba(0, 0, 0, .3);
+        border-radius:100px;
+        transition: background, 0.3s;
+        background: $nav-logo-bg-color;
+        color: $nav-logo-font-color;
+        line-height: 40px;
+        width: 40px;
         height: 40px;
-        padding: 10px;
-
-        h1 {
-            line-height: 40px;
-            width: 40px;
-            height: 40px;
-            margin: 0px auto;
-
-            a {
-                box-shadow: inset 0px, 1px, 0px, rgba(0, 0, 0, .3);
-                border-radius:100px;
-                transition: background, 0.3s;
-                background: $nav-logo-bg-color;
-                color: $nav-logo-font-color;
-                line-height: 40px;
-                width: 40px;
-                height: 40px;
-                text-align: center;
-                font-family: $nav-logo-font;
-                font-weight: normal;
-                font-size: 21px;
-                padding: 0px;
-                text-decoration: none;
-                display: block;
-
-                &:hover {
-                    background: darken($nav-logo-bg-color, 5%);
-
-                }
-            }
-        }
-
-        .mobile-menu {
-            display: none;
-            background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB8AAAAYCAYAAAACqyaBAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAENJREFUeNpiDEsp/s8wQICJYQDBqOUDAhiBWG3ALP//n7LEzsjIOBrnpIfaaCEzavloITNayIwWMqOWjxYy1AAAAQYAU/cNH5fS2asAAAAASUVORK5CYII=) no-repeat;
-            position: absolute;
-            top: 18px;
-            right: 10px;
-            z-index: 1;
-            height: 24px;
-            width: 30px;
-            overflow: hidden;
-            text-indent: -3000px;
-        }
-    }
-
-    ////////////////////////
-    // LIST OF LINKS ///////
-    ////////////////////////
-    ul {
-        list-style-type: none;
+        text-align: center;
+        font-family: $nav-logo-font;
+        font-weight: normal;
+        font-size: 21px;
         padding: 0px;
-        margin: 0px;
-        position: absolute;
-        top: 60px;
-        bottom: 60px;
-        right: 0px;
-        left: 0px;
-        z-index: 1;
-        overflow: auto;
+        text-decoration: none;
+        display: block;
 
-        li {
-            box-shadow: inset 0px, 1px, 0px, $nav-hover;
-            height: 59px;
-            border-bottom: 1px solid $nav-dark;
-            color: $nav-font-color;
-            font-size: 16px;
-            position: relative;
-
-            &:first-child {
-                box-shadow: none;
-            }
-
-            a {
-                display: block;
-                color: $nav-font-color;
-                font-family: $nav-font;
-                font-weight: lighter;
-                font-size: 16px;
-                line-height: 59px;
-                padding: 0px 20px;
-                text-decoration: none;
-                text-transform: capitalize;
-
-                &:hover {
-                    background: $nav-hover;
-                    padding: 0px 20px 0px 15px;
-                    border-left: 5px solid $nav-highlight;
-                }
-            }
-
-            //TOGGLE BUTTON
-            .nav-toggle-button {
-                box-shadow: inset 0px, 1px, 1px, rgba(0, 0, 0, .3);
-                border-radius: 100px;
-                background: $nav-toggle-bg;
-                position: absolute;
-                top: 20px;
-                right: 10px;
-                z-index: 1;
-                //width: 30px;
-                height: 20px;
-                padding: 0px 10px;
-                cursor: pointer;
-
-                em {
-                    text-transform: uppercase;
-                    font-style: normal;
-                    font-weight: normal;
-                    line-height: 22px;
-                    font-size: 10px;
-                    display: block;
-                    margin: 0px 15px 0px 0px;
-                }
-
-                strong {
-                   border-radius: 100px;
-                    box-shadow: inset 0px, 1px, 0px, rgba(255, 255, 255, .2), 0px, 1px, 1px, rgba(0, 0, 0, .3);
-                    position: absolute;
-                    top: 3px;
-                    right: 3px;
-                    z-index: 1;
-                    background: $nav-toggle-knob;
-                    height: 14px;
-                    width: 14px;
-                }
-
-                &[data-included="false"] {
-                    text-align: right;
-                    background: $nav-toggle-selected-bg;
-
-                    strong {
-                        right: auto;
-                        left: 3px;
-                    }
-                    em {
-                        margin: 0px 0px 0px 15px;
-                    }
-                }
-
-
-            }
+        &:hover {
+          background: darken($nav-logo-bg-color, 5%);
         }
+      }
     }
 
-    ////////////////////////
-    // FOOTER //////////////
-    ////////////////////////
-    footer {
-        box-shadow: inset 0px, 1px, 0px, lighten($nav-dark, 5%);
-        border-top: 1px solid $nav-dark;
-        background: $nav-dark;
-        padding: 10px;
+    .mobile-menu {
+      display: none;
+      background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB8AAAAYCAYAAAACqyaBAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAENJREFUeNpiDEsp/s8wQICJYQDBqOUDAhiBWG3ALP//n7LEzsjIOBrnpIfaaCEzavloITNayIwWMqOWjxYy1AAAAQYAU/cNH5fS2asAAAAASUVORK5CYII=) no-repeat;
+      position: absolute;
+      top: 18px;
+      right: 10px;
+      z-index: 1;
+      height: 24px;
+      width: 30px;
+      overflow: hidden;
+      text-indent: -3000px;
+    }
+  }
+
+  ////////////////////////
+  // LIST OF LINKS ///////
+  ////////////////////////
+  ul {
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+    position: absolute;
+    top: 60px;
+    bottom: 60px;
+    right: 0px;
+    left: 0px;
+    z-index: 1;
+    overflow: auto;
+
+    li {
+      box-shadow: inset 0px 1px 0px $nav-hover;
+      height: 59px;
+      border-bottom: 1px solid $nav-dark;
+      color: $nav-font-color;
+      font-size: 16px;
+      position: relative;
+
+      &:first-child {
+        box-shadow: none;
+      }
+
+      a {
+        display: block;
+        color: $nav-font-color;
+        font-family: $nav-font;
+        font-weight: lighter;
+        font-size: 16px;
+        line-height: 59px;
+        padding: 0px 20px;
+        text-decoration: none;
+        text-transform: capitalize;
+
+        &:hover {
+          background: $nav-hover;
+          padding: 0px 20px 0px 15px;
+          border-left: 5px solid $nav-highlight;
+        }
+      }
+
+      //TOGGLE BUTTON
+      .nav-toggle-button {
+        box-shadow: inset 0 1px 0px rgba(0,0,0,.2);
+        border-radius: 100px;
+        background: $nav-toggle-bg;
         position: absolute;
-        bottom: 0px;
-        left: 0px;
-        right: 0px;
+        top: 20px;
+        right: 10px;
         z-index: 1;
+        //width: 30px;
+        height: 20px;
+        padding: 0px 10px;
+        cursor: pointer;
 
+        em {
+          text-transform: uppercase;
+          font-style: normal;
+          font-weight: normal;
+          line-height: 22px;
+          font-size: 10px;
+          display: block;
+          margin: 0px 15px 0px 0px;
+        }
 
+        strong {
+          border-radius: 100px;
+          box-shadow: inset 0px 1px 0px rgba(255, 255, 255, .2), 0px 1px 0px rgba(0, 0, 0, .3);
+          position: absolute;
+          top: 3px;
+          right: 3px;
+          z-index: 1;
+          background: $nav-toggle-knob;
+          height: 14px;
+          width: 14px;
+        }
+
+        &[data-included="false"] {
+          text-align: right;
+          background: $nav-toggle-selected-bg;
+
+          strong {
+            right: auto;
+            left: 3px;
+          }
+          em {
+            margin: 0px 0px 0px 15px;
+          }
+        }
+      }
     }
+  }
+
+  ////////////////////////
+  // FOOTER //////////////
+  ////////////////////////
+  footer {
+    box-shadow: inset 0px 1px 0px lighten($nav-dark, 5%);
+    border-top: 1px solid $nav-dark;
+    background: $nav-dark;
+    padding: 10px;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 1;
+  }
 }
 
 //////////////////////////////////////////////////////////
 // MOBILE ////////////////////////////////////////////////
 //////////////////////////////////////////////////////////
 @media only screen and (max-width: 760px) {
-    #{$nav-namespace}-pinned-left, #{$nav-namespace}-pinned-right{
-        padding-left: 0;
-        padding-right: 0;
-        padding-top: 60px;
+  #{$nav-namespace}-pinned-left, #{$nav-namespace}-pinned-right{
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 60px;
+  }
+
+  #{$nav-namespace} {
+    width: auto;
+
+    &.pinned {
+      bottom: auto;
+      left: 0px;
+      right: 0px;
+    }
+    header .mobile-menu {
+      display: block;
     }
 
-    #{$nav-namespace} {
-        width: auto;
-
-        &.pinned {
-            bottom: auto;
-            left: 0px;
-            right: 0px;
-        }
-        header .mobile-menu {
-            display: block;
-        }
-
-        ul {
-            position: fixed;
-            left: 0px;
-            right: 0px;
-            bottom: 0px;
-            z-index: 100;
+    ul {
+      position: fixed;
+      left: 0px;
+      right: 0px;
+      bottom: 0px;
+      z-index: 100;
 
 
-            background: $nav-bg;
-            display: none;
+      background: $nav-bg;
+      display: none;
 
-            &.nav-show {
-                display: block;
-            }
-        }
-        footer {
-            display: none;
-        }
+      &.nav-show {
+        display: block;
+      }
     }
+    footer {
+      display: none;
+    }
+  }
 }
