--- a/resources/scss/module/builder/_options.scss
+++ b/resources/scss/module/builder/_options.scss
@@ -9,3 +9,6 @@ $highlight-color: #2ecc71;
 $cherry-font: 'Cherry Swash', sans-serif;
 $basefont: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
+$blueGrayDark: lighten(#ced7db, 8%);
+$blueGrayLight: #ebeef0;
+$grayWhite: #fdfdfd;
