--- a/public/_partials/builder/buttons-sizes.jade
+++ b/public/_partials/builder/buttons-sizes.jade
@@ -1,11 +1,13 @@
 section(id="sizes" class="showcase" data-type="example" data-name="sizes")
   h3 Button Sizes
 
-  section.showcase-examples.
-    <a href="#" class="button button-rounded button-primary button-giant">press me</a>
-    <a href="#" class="button button-rounded button-primary button-jumbo">press me</a>
-    <a href="#" class="button button-rounded button-primary button-large">press me</a>
-    <a href="#" class="button button-rounded button-primary">press me</a>
-    <a href="#" class="button button-rounded button-primary button-small">press me</a>
-    <a href="#" class="button button-rounded button-primary button-tiny">press me</a>
+  section.showcase-examples
+    div
+      <a href="#" class="button button-rounded button-primary button-giant">press me</a>
+      <a href="#" class="button button-rounded button-primary button-jumbo">press me</a>
+      <a href="#" class="button button-rounded button-primary button-large">press me</a>
+    div 
+      <a href="#" class="button button-rounded button-primary">press me</a>
+      <a href="#" class="button button-rounded button-primary button-small">press me</a>
+      <a href="#" class="button button-rounded button-primary button-tiny">press me</a>
   code
