WIP - settings all types to options.types for now

--- a/public/_partials/builder/buttons-circle.jade
+++ b/public/_partials/builder/buttons-circle.jade
@@ -1,4 +1,4 @@
-section(id="circle" class="showcase" data-type="build" data-name="circle")
+section(id="circle" class="showcase" data-type="example" data-name="circle")
   h3 Circle Buttons
 
   section.showcase-examples.
