--- a/public/_partials/builder/buttons-flat.jade
+++ b/public/_partials/builder/buttons-flat.jade
@@ -1,4 +1,4 @@
-section(id="flat" class="showcase" data-type="build" data-name="flat")
+section(id="flat" class="showcase" data-type="example" data-name="flat")
   h3 Flat Buttons
 
   section.showcase-examples.
