--- a/public/_partials/builder/buttons-pill.jade
+++ b/public/_partials/builder/buttons-pill.jade
@@ -1,4 +1,4 @@
-section(id="pill" class="showcase" data-type="build" data-name="pill")
+section(id="pill" class="showcase" data-type="example" data-name="pill")
   h3 Pill Buttons
 
   section.showcase-examples.
