--- a/public/_partials/builder/buttons-rounded.jade
+++ b/public/_partials/builder/buttons-rounded.jade
@@ -1,4 +1,4 @@
-section(id="rounded" class="showcase" data-type="build" data-name="rounded")
+section(id="rounded" class="showcase" data-type="example" data-name="rounded")
   h3 Rounded Buttons
 
   section.showcase-examples.
