wip on shapes and sizes

--- a/public/_partials/builder/buttons-sizes.jade
+++ b/public/_partials/builder/buttons-sizes.jade
@@ -1,13 +1,47 @@
 section(id="sizes" class="showcase" data-type="example" data-name="sizes")
-  h3 Button Sizes
+  h3 Shapes &amp; Sizes
 
   section.showcase-examples
-    div
-      <a href="#" class="button button-rounded button-primary button-giant">press me</a>
-      <a href="#" class="button button-rounded button-primary button-jumbo">press me</a>
-      <a href="#" class="button button-rounded button-primary button-large">press me</a>
-    div 
-      <a href="#" class="button button-rounded button-primary">press me</a>
-      <a href="#" class="button button-rounded button-primary button-small">press me</a>
-      <a href="#" class="button button-rounded button-primary button-tiny">press me</a>
+    <a href="http://unicorn-ui.com/" class="button button-tiny">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-rounded button-tiny">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-pill button-tiny">Go</a>
+    <button class="button button-square button-tiny"><i class="fa fa-plus"></i></button>
+    <button class="button button-box button-tiny"><i class="fa fa-plus"></i></button>
+    <button class="button button-circle button-tiny"><i class="fa fa-plus"></i></button>
+    <br>
+    <a href="http://unicorn-ui.com/" class="button button-primary button-small">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-primary button-rounded button-small">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-primary button-pill button-small">Go</a>
+    <button class="button button-primary button-square button-small"><i class="fa fa-plus"></i></button>
+    <button class="button button-primary button-box button-small"><i class="fa fa-plus"></i></button>
+    <button class="button button-primary button-circle button-small"><i class="fa fa-plus"></i></button>
+    <br>
+    <a href="http://unicorn-ui.com/" class="button button-action">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-action button-rounded">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-action button-pill">Go</a>
+    <button class="button button-action button-square"><i class="fa fa-plus"></i></button>
+    <button class="button button-action button-box"><i class="fa fa-plus"></i></button>
+    <button class="button button-action button-circle"><i class="fa fa-plus"></i></button>
+    <br>
+    <a href="http://unicorn-ui.com/" class="button button-highlight button-large">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-highlight button-rounded button-large">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-highlight button-pill button-large">Go</a>
+    <button class="button button-highlight button-square button-large"><i class="fa fa-plus"></i></button>
+    <button class="button button-highlight button-box button-large"><i class="fa fa-plus"></i></button>
+    <button class="button button-highlight button-circle button-large"><i class="fa fa-plus"></i></button>
+    <br>
+    <a href="http://unicorn-ui.com/" class="button button-caution button-jumbo">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-caution button-rounded button-jumbo">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-caution button-pill button-jumbo">Go</a>
+    <button class="button button-caution button-square button-jumbo"><i class="fa fa-plus"></i></button>
+    <button class="button button-caution button-box button-jumbo"><i class="fa fa-plus"></i></button>
+    <button class="button button-caution button-circle button-jumbo"><i class="fa fa-plus"></i></button>
+    <br>
+    <a href="http://unicorn-ui.com/" class="button button-royal button-giant">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-royal button-rounded button-giant">Go</a>
+    <a href="http://unicorn-ui.com/" class="button button-royal button-pill button-giant">Go</a>
+    <button class="button button-royal button-square button-giant"><i class="fa fa-plus"></i></button>
+    <button class="button button-royal button-box button-giant"><i class="fa fa-plus"></i></button>
+    <button class="button button-royal button-circle button-giant"><i class="fa fa-plus"></i></button>
+
   code
